--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -63,7 +63,7 @@ If(WIN32)
     Set(CMAKE_CXX_FLAGS_RELEASE "/Od /Ob0")
 Endif()
 
-Set(CMAKE_CXX_FLAGS "-m32")
+Set(CMAKE_CXX_FLAGS "-m32 -std=c++11")
 
 # Create a static library
 Add_Library(DynamicHooks STATIC ${DYNAMICHOOKS_FILES})
